Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -192,7 +192,7 @@ textarea {
 
 }
 @media screen and (-ms-high-contrast: white-on-black) {
-  div { background-image: url('image-wb.png'); }
+  
 }
 
 /* LANDMARKS */
